--- a/3/public/template.html
+++ b/3/public/template.html
@@ -15,6 +15,22 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
         />
+        <style>
+            #skip a {
+                position: absolute;
+                left: -10000px;
+                top: auto;
+                width: 1px;
+                height: 1px;
+                overflow: hidden;
+            }
+
+            #skip a:focus {
+                position: static;
+                width: auto;
+                height: auto;
+            }
+        </style>
     </head>
 
     <body>
